k8s/cozyflow/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cozyflow
  labels:
    name: cozyflow
