k8s/cozyflow/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cozyflow-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy
  listeners:
    - name: cozyflow-https
      hostname: cozyflow.com
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: cozyflow-com-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: api-cozyflow-https
      hostname: api.cozyflow.com
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: cozyflow-com-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
